Wireframe Updates to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header class="header">HEADER</header>
-    <section class="section">
-        <main class="main">
-            <article class = "article">ARTICLE</article>
-            <article class = "article">ARTICLE</article>
-            <article class = "article">ARTICLE</article>
-        </main>
-        <aside class="aside">ASIDE</aside>
-    </section>
+     <div class = "content">
+         
+         <main class="main">
+             <article class = "article">ARTICLE</article>
+             <article class = "article">ARTICLE</article>
+             <article class = "article">ARTICLE</article>
+         </main>
+            
+         <aside class="aside">ASIDE</aside>
+     </div>
     <footer class="footer">FOOTER</footer>
 </body>
 </html>
